Solved cancel race condition Reverted consumer activation to run on separate thread Removed Channel.getFirst() and Channel.add(delivery) - not needed Implemented receiveNoWait functionality by using Channel.deliver(receiver) Implemented message ordering and associated tests